sorted some layout issues with the pages simple fixes GF

--- a/project/cms/public/assets/css/style.css
+++ b/project/cms/public/assets/css/style.css
@@ -546,6 +546,19 @@ ul#pages li.page-item ul li.page-item{
     margin-top:10px;
 }
 
+ul.subList{
+    margin-bottom:0 !important;
+    margin-left:20px !important;
+}
+
+ul.subList li{
+    margin-bottom:0 !important;
+}
+
+ul.subList li ul li{
+    margin-bottom:5px !important;
+}
+
 
 /* ==|== non-semantic helper classes ========================================
    Please define your styles before this section.
